# Kakusho-protocol

./: README.md
backend/: .dockerignore  Dockerfile  docker-compose.yml  package-lock.json  requirements.txt  schema.sql
backend/app/: main.py
backend/scripts/: prove.js
backend/zk/: nfc_chip_verify.wasm  nfc_chip_verify_final.zkey  nfc_chip_verify_verification_key.json  verification_key.json
circuits/: package-lock.json  package.json  restricted_codes.json
circuits/common/: age_check.circom  freshness_check.circom  merkle_membership.circom  nfc_chip_verify.circom  nullifier.circom
circuits/ocr_tier/: kyc_ocr.circom
circuits/scripts/:  compile_nfc.sh  build_restricted_tree.js  compile.sh  generate_verifier.js  trusted_setup.sh
contracts/: Cargo.toml
contracts/groth16_verifier/: Cargo.toml
contracts/groth16_verifier/src/: lib.rs  test.rs
contracts/kyc_registry/: Cargo.toml
contracts/kyc_registry/src/: integrator.rs  lib.rs  storage.rs  test.rs
contracts/kyc_registry/test_snapshots/test/: update_rules_changes_stored_config.1.json  verify_rejects_inactive_integrator.1.json  verify_rejects_stale_timestamp.1.json
docs/: architecture.md  doc.md  integration-guide.md
frontend/: README.md  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/component/: qrcode.tsx
kakusho-scanner-app/: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
sdk/: package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
(+94 files in other folders)
