[workspace]
resolver = "2"
members = [
    "groth16_verifier",
    "kyc_registry",
]

[workspace.dependencies]          # ← must be [workspace.dependencies], NOT [dependencies]
soroban-sdk = "26.0.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true